adding a mailer order confirmation after a user completes purchase.

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,7 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 
+/config/initializers/app_env_vars.rb
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
