--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,5 @@ test:
 production:
   <<: *default
   database: prod/phonify
+  username: production
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
